--- a/myapp/templates/myapp/base1.html
+++ b/myapp/templates/myapp/base1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>{% block title %}the Verse{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.30.0.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
