--- a/myapp/templates/myapp/claim-drilldown.html
+++ b/myapp/templates/myapp/claim-drilldown.html
@@ -80,7 +80,7 @@
     }
     
     .content-header h1 {
-        color: #1BB64F;
+        color: #3ab61bff;
         margin-bottom: 0.5rem;
     }
     
